--- a/advisory-services.html
+++ b/advisory-services.html
@@ -228,10 +228,9 @@
     <div class="container">
         <div class="text text-center">
             <p>
-                At Andersen Tanzania, we combine deep local expertise with the strength of Andersen Global to deliver 
-				trusted tax and advisory solutions. Our professionals work closely with businesses and individuals to 
-				navigate complex regulatory environments, manage risk, and unlock sustainable growth. We are committed 
-				to excellence, independence, and long-term client relationships built on integrity and trust.
+               At Andersen in Tanzania, we combine deep local expertise with the resources of the member and collaborating firms of Andersen Global to deliver trusted tax and advisory solutions.
+				Our professionals work closely with businesses and individuals to navigate complex regulatory environments, manage risk, and unlock sustainable growth. We are committed to excellence, 
+				independence, and long-term client relationships built on integrity and trust.
 
             </p>
             <a href="about.html" class="button">Learn More</a>
