--- a/advisory-services.html
+++ b/advisory-services.html
@@ -200,11 +200,15 @@
 
                     <p>
                        Our advisory practice supports businesses in addressing critical challenges and unlocking 
-					   opportunities for growth. We specialize in: Business Consulting Structuring businesses for efficiency, 
-					   profitability, and resilience. Risk Management  Helping organizations anticipate, manage, and mitigate risks
-					   effectively. Transaction Advisory Supporting mergers, acquisitions, and business restructuring with due 
-					   diligence and strategic guidance. Corporate Governance Assisting companies in building transparent, accountable, 
-					   and sustainable governance systems.At Andersen Tanzania, our solutions are practical, research-driven, and 
+					   opportunities for growth. We specialize in: 
+					   <b>Business Advisory</b> - Structuring businesses for efficiency, 
+					   profitability, and resilience.
+					   <b>Risk Management</b> - Helping organizations anticipate, manage, and mitigate risks
+					   effectively. 
+					   <b>Transaction Advisory</b> - Supporting mergers, acquisitions, and business restructuring with due 
+					   diligence and strategic guidance. 
+					   <b>Corporate Governance</b> - Assisting companies in building transparent, accountable, 
+					   and sustainable governance systems.<br>At Andersen Tanzania, our solutions are practical, research-driven, and 
 					   designed for impact.
                     </p>
                 </div>
