--- a/advisory-services.html
+++ b/advisory-services.html
@@ -203,11 +203,11 @@
 					   opportunities for growth. We specialize in: 
 					   <b>Business Advisory</b> - Structuring businesses for efficiency, 
 					   profitability, and resilience.
-					   <b>Risk Management</b> - Helping organizations anticipate, manage, and mitigate risks
+					    <br><b>Risk Management</b> - Helping organizations anticipate, manage, and mitigate risks
 					   effectively. 
-					   <b>Transaction Advisory</b> - Supporting mergers, acquisitions, and business restructuring with due 
+					    <br><b>Transaction Advisory</b> - Supporting mergers, acquisitions, and business restructuring with due 
 					   diligence and strategic guidance. 
-					   <b>Corporate Governance</b> - Assisting companies in building transparent, accountable, 
+					    <br><b>Corporate Governance</b> - Assisting companies in building transparent, accountable, 
 					   and sustainable governance systems.<br>At Andersen Tanzania, our solutions are practical, research-driven, and 
 					   designed for impact.
                     </p>
