--- a/careers.html
+++ b/careers.html
@@ -15,7 +15,7 @@
         <link rel="shortcut icon" href="https://andersen.com/favicon.ico">
     </head>
 
-    <body class="landing">
+    <body class="index">
         <div class="off-canvas-wrapper">
             <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
                 <div class="off-canvas position-right" id="offCanvas" data-off-canvas data-position="right">
@@ -25,7 +25,7 @@
                     
                     <div class="mobile-menu">
                         <ul class="vertical menu" data-accordion-menu>
-                            <li><a href="index.html">Home</a></li>
+                           <li><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
 <li>
     <a href="#">Services</a>
@@ -42,7 +42,8 @@
 <li><a href="global-presence.html">Global Presence</a></li>
 
                           </ul>
-                    </div>                </div>
+                    </div>                
+				</div>
 
                 <div class="off-canvas-content" data-off-canvas-content>
                     <header class="navbar" data-margin-top='0' data-sticky data-off-canvas-sticky>
@@ -106,7 +107,7 @@
                     
                     			<nav class="main-nav">
                     				<div class="grid-x large-collapse">
-                    					<div class="search cell desktop-search">
+                    					<div class="search cell">
                     						<form method="get">
                     							<input type="text" name="q" value="" placeholder="Search" class="q" />
                     							<button type="submit"><img src="assets/img/search.svg" alt="search"></button>
@@ -144,7 +145,7 @@
 </li>
 
 <li>
-    <a href="javascript:void(0)">News</a>
+    <a href="news.html">News</a>
 </li>
 
 <li>
