--- a/andersen-advisory-services.html
+++ b/andersen-advisory-services.html
@@ -130,8 +130,8 @@
 <li>
     <a href="#">Services</a>
     <ul class="lvl-2 menu row">
-        <li><a href="andersen-tax-services.html">Tax Services</a></li>
-        <li><a href="andersen-advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
 </li>
 
@@ -391,8 +391,8 @@
                     				<nav class="cell large-3 medium-4 small-12">
                     					<h5>Services</h5>
     <ul>
-        <li><a href="andersen-tax-services.html">Tax Services</a></li>
-        <li><a href="andersen-advisory-services.html">Advisory Services</a></li>
+        <li><a href="andersen-tax-services.html">Andersen Tax Services</a></li>
+        <li><a href="andersen-advisory-services.html">Andersen Advisory Services</a></li>
     </ul>
                     				</nav>
                     				<nav class="cell large-3 medium-4 small-12">
