--- a/andersen-advisory-services.html
+++ b/andersen-advisory-services.html
@@ -197,7 +197,7 @@
             <!-- LEFT: TEXT -->
             <div class="cell large-6 medium-12">
                 <div class="tax-content">
-                    <h2 class="section-heading">Advisory Services</h2>
+                    <h2 class="section-heading">Andersen Advisory Services</h2>
 
                     <p>
                        Our advisory practice supports businesses in addressing critical challenges and unlocking 
