--- a/andersen-advisory-services.html
+++ b/andersen-advisory-services.html
@@ -209,7 +209,7 @@
 					    <br><b>Transaction Advisory</b> - Supporting mergers, acquisitions, and business restructuring with due 
 					   diligence and strategic guidance. 
 					    <br><b>Corporate Governance</b> - Assisting companies in building transparent, accountable, 
-					   and sustainable governance systems.<br>At Andersen Tanzania, our solutions are practical, research-driven, and 
+					   and sustainable governance systems.<br>At Andersen in Tanzania, our solutions are practical, research-driven, and 
 					   designed for impact.
                     </p>
                 </div>
